--- a/.github/workflows/openwrt-linux-6.0.yml
+++ b/.github/workflows/openwrt-linux-6.0.yml
@@ -6,7 +6,7 @@
 # Blog: https://p3terx.com
 #=================================================
 
-name: NanoPi-R4S-全插件
+name: openwrt-linux-6.0-全插件
 
 on:
   repository_dispatch:
@@ -146,8 +146,8 @@ jobs:
         sed -i "s/http:\/\/192.168.123.100:2345\/snapshots/https:\/\/openwrt.cc\/snapshots\/$(date +"%Y-%m-%d")\/lean/g" files/etc/opkg/distfeeds.conf.mirror
         make package/install -j$(nproc) || make package/install -j1 V=s
         make target/install -j$(nproc) || make target/install -j1 V=s
-        rm -rf bin/targets/rockchip/armv8/openwrt-rockchip-armv8-friendlyarm_nanopi-r4*.manifest
-        rm -rf bin/targets/rockchip/armv8/openwrt-rockchip-armv8-friendlyarm_nanopi-r4*-rootfs.tar.gz
+        rm -rf bin/targets/rockchip/armv8/openwrt-rockchip-armv8-*.manifest
+        rm -rf bin/targets/rockchip/armv8/openwrt-rockchip-armv8-*-rootfs.tar.gz
         rm -rf bin/targets/rockchip/armv8/config.buildinfo
         rm -rf bin/targets/rockchip/armv8/packages-server.zip
         make checksum
@@ -168,7 +168,7 @@ jobs:
       env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-          name: ${{ steps.tag.outputs.release_date }} NanoPi-R4S-R4SE-linux-5.4_正式版_全插件
+          name: ${{ steps.tag.outputs.release_date }} openwrt-linux-6.0-全插件
           tag_name: ${{ steps.tag.outputs.release_tag }}
           body_path: release.txt
           files: ${{ env.FIRMWARE }}/*
