--- a/.github/workflows/openwrt-linux-6.0.yml
+++ b/.github/workflows/openwrt-linux-6.0.yml
@@ -145,7 +145,7 @@ jobs:
         sed -i "s/http:\/\/192.168.123.100:2345\/snapshots/https:\/\/openwrt.cc\/snapshots\/$(date +"%Y-%m-%d")\/lean/g" files/etc/opkg/distfeeds.conf.mirror
         make package/install -j$(nproc) || make package/install -j1 V=s
         make target/install -j$(nproc) || make target/install -j1 V=s
-        pushd bin/targets/armv8
+        pushd bin/targets/rockchip/armv8
         kernelv=`cat openwrt-rockchip-armv8.manifest | grep 'kernel - ' |  awk -F '[- ]' '{print $4}'`
         echo "::set-output name=kernel_version::$kernelv"
         popd
