--- a/configs/lean/lean.config
+++ b/configs/lean/lean.config
@@ -13,6 +13,7 @@ CONFIG_TARGET_DEVICE_rockchip_armv8_DEVICE_friendlyarm_nanopi-r2s=y
 CONFIG_TARGET_DEVICE_rockchip_armv8_DEVICE_friendlyarm_nanopi-r4s=y
 CONFIG_TARGET_DEVICE_rockchip_armv8_DEVICE_friendlyarm_nanopi-r4se=y
 CONFIG_TARGET_DEVICE_rockchip_armv8_DEVICE_friendlyarm_nanopi-r5s=y
+CONFIG_TARGET_DEVICE_rockchip_armv8_DEVICE_firefly_station-p2=y
 
 CONFIG_TARGET_KERNEL_PARTSIZE=50
 CONFIG_TARGET_ROOTFS_PARTSIZE=1028
