--- a/.github/workflows/openwrt-linux-6.0.yml
+++ b/.github/workflows/openwrt-linux-6.0.yml
@@ -148,7 +148,7 @@ jobs:
         make target/install -j$(nproc) || make target/install -j1 V=s
         pushd bin/targets/rockchip/armv8
         kernelv=`cat openwrt-rockchip-armv8.manifest | grep 'kernel - ' |  awk -F '[- ]' '{print $4}'`
-        echo "::set-output name=kernel_version::$kernelv"
+        echo "kernel_version=$kernelv" >> $GITHUB_OUTPUT
         popd
         rm -rf bin/targets/rockchip/armv8/openwrt-rockchip-armv8.manifest
         rm -rf bin/targets/rockchip/armv8/openwrt-rockchip-armv8-rootfs.tar.gz
